java_library (
    name = 'lib',
    srcs = glob(['*.java']),
    deps = [
        '@maven//:io_projectreactor_netty_reactor_netty',
        '@maven//:io_projectreactor_reactor_core',
    ]
)

java_binary(
    name = 'server',
    main_class = 'cc.jbx.renetty.Server',
    runtime_deps = [
        ':lib',
    ]
)