java_library (
    name = 'server_lib',
    srcs = ['Server.java'],
    deps = [
        '@maven//:io_projectreactor_netty_reactor_netty',
        '@maven//:io_projectreactor_reactor_core',
    ],
    resources = [
        'logger.properties',
    ],
    resource_strip_prefix = 'renetty/cc/jbx/renetty',
)

java_library(
    name = 'client_lib',
    srcs = ['Client.java'],
    deps = [
            '@maven//:org_eclipse_jetty_jetty_util',
            '@maven//:org_eclipse_jetty_http2_http2_client',
            '@maven//:org_eclipse_jetty_http2_http2_common',
            '@maven//:org_eclipse_jetty_jetty_http',
        ],
        resources = [
            'logger.properties',
        ],
        resource_strip_prefix = 'renetty/cc/jbx/renetty',
)

java_binary(
    name = 'server',
    main_class = 'cc.jbx.renetty.Server',
    runtime_deps = [
        ':server_lib',
    ],
)

java_binary(
    name = 'client',
    main_class = 'cc.jbx.renetty.Client',
    runtime_deps = [
        ':client_lib',
    ]
)