java_library(
    name = 'lib',
    srcs = glob(['*.java']),
    deps = [
            '@maven//:org_eclipse_jetty_jetty_util',
            '@maven//:org_eclipse_jetty_http2_http2_client',
            '@maven//:org_eclipse_jetty_http2_http2_common',
            '@maven//:org_eclipse_jetty_jetty_http',
        ],
        resources = [
            'logger.properties',
        ],
        resource_strip_prefix = 'renetty/cc/jbx/renetty/client',
)

java_binary(
    name = 'client',
    main_class = 'cc.jbx.renetty.client.Client',
    runtime_deps = [
        ':lib',
    ]
)